--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.3.1"
+lazy_static = "1.4.0"
 lopdf = "0.30.0"
+regex = "1.7.3"
 serde = { version = "1.0", features = ["derive"] }
