--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,6 @@ name = "docgpt"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [profile.release]
 strip = true
 lto = true
@@ -14,6 +13,7 @@ panic = "abort"
 actix-web = "4.3.1"
 lazy_static = "1.4.0"
 lopdf = "0.30.0"
+redis = "0.23.0"
 regex = "1.7.3"
-serde = { version = "1.0", features = ["derive"] }
 thiserror = "1"
+uuid = { version = "1.3.1",features = ["v4", "fast-rng"]}
