--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,7 @@ lazy_static = "1.4.0"
 lopdf = "0.30.0"
 redis = "0.23.0"
 regex = "1.7.3"
-reqwest = {version = "0.11.17", features = ["blocking", "json"]}
-serde = {version = "1.0.162", features = ["derive"]}
-serde_json = "1.0.96"
-thiserror = "1"
+rust-bert = "0.20.0"
+serde = "1.0.162"
+tokio = "1.28.0"
 uuid = { version = "1.3.1", features = ["v4", "fast-rng"]}
