feat: cosine similarity

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ panic = "abort"
 actix-web = "4.3.1"
 lazy_static = "1.4.0"
 lopdf = "0.30.0"
+ndarray = "0.15.6"
 regex = "1.7.3"
 rust-bert = "0.20.0"
 serde = "1.0.162"
