--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ actix-web = "4.3.1"
 lazy_static = "1.4.0"
 lopdf = "0.30.0"
 ndarray = "0.15.6"
+openai-api-rs = "0.1.7"
 rayon = "1.7.0"
 regex = "1.7.3"
 rust-bert = "0.20.0"
