--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ panic = "abort"
 [dependencies]
 actix-files = "0.6.2"
 actix-web = "4.3.1"
+env_logger = "0.10.0"
 lazy_static = "1.4.0"
 lopdf = "0.31.0"
 ndarray = "0.15.6"
