feat: blazing fast embeddings

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,12 @@ panic = "abort"
 [dependencies]
 actix-files = "0.6.2"
 actix-web = "4.3.1"
+crossbeam = "0.8.2"
 image = "0.24.6"
 lazy_static = "1.4.0"
 lopdf = "0.31.0"
 ndarray = "0.15.6"
+object-pool = "0.5.4"
 openai-api-rs = "0.1.7"
 rayon = "1.7.0"
 regex = "1.7.3"
